--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World
+<html>
+	<head>
+		<title>Portfolio | Wasimakram Mulla</title>
+	</head>
+<body>
+<h2 style="color:red">This page is under construction</h2>
+<h3>Thanks a ton for showing interest, I will get back on this ASAP.</h3>
+</body>
+</html>
