resume link updated

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li><a href="#/projects/">Projects</a></li>
 
             <li><a href="#/contact/">Contact</a></li>
-            <li><a href="resumes/">Resumes</a></li>
+            <li><a href="resumes/Wasimakram_Mulla.pdf" target="_blank">Download Resume</a></li>
 
           </ul>
 
