--- a/projects/bridge/index.html
+++ b/projects/bridge/index.html
@@ -127,7 +127,7 @@
 				  <h3 class="panel-title">Rules to play <em><u>THE BRIDGE</u></em></h3>
 				</div>
 				<div class="panel-body">
-					<strong>Only Rule:</strong> You should match card number or card type with your card, for e.g if <strong>King of hearts</strong> is played you should match it with either a <strong>Kind card</strong> (of any type like spade, club or diamond) or you can play any card which has an <strong>heart</strong> on it.<br/><br/>
+					<strong>Only Rule:</strong> You should match card number or card type with your card, for e.g if <strong>King of hearts</strong> is played you should match it with either a <strong>King card</strong> (of any type like spade, club or diamond) or you can play any card which has an <strong>heart</strong> on it.<br/><br/>
 					<u><strong>Special cards with special powers</strong></u>
 					<ul>
 						<li><strong>A (Ace)</strong> - Next player should pull 3 cards from deck, but if next player too plays an "A" card then next to next player must pull 6 cards and so on.<br/><br/></li>
