Modified note content

--- a/projects/bridge/index.html
+++ b/projects/bridge/index.html
@@ -140,7 +140,7 @@
 					<ol class="text-danger">
 						<li>You can tackle "A", "2" and "9" with similar cards only.</li>
 						<li>Special cards can be of any type, heart, spade, diamond or club.</li>
-						<li>In this game you are <em>Player 1</em> and your opponents will always be 3 <em>Artificially Intelligent</em> players.</li>
+						<li>In this game you are <em>Player 1</em> and your opponents will be <em>AI's (Artificially Intelligent)</em> players.</li>
 					</ol>
 					<button class="btn btn-primary btn-sm" ng-click="gameCtrl.startGame();">Start Game</button>
 				</div>
