Added projects through JSON in repeat mode

--- a/index.html
+++ b/index.html
@@ -52,13 +52,16 @@
 
 	<script src="js/Libs/bootstrap.min.js"></script>
 
-	<script src="js/Libs/angular.min.js"></script>
+	<script src="js/Libs/angular-1.5.min.js"></script>
+	<script src="js/Libs/angular-sanitize.min.js"></script>
 
 	<script src="js/Libs/angular-resource.min.js"></script>
 
 	<script src="js/Libs/angular-route.min.js"></script>
 
 	<script src="js/Controllers/app.js"></script>
+	<script src="js/Controllers/projectscontroller.js"></script>
+	<script src="js/Controllers/projectsservice.js"></script>
 
   </head>
 
