--- a/projects/myBlog/login.html
+++ b/projects/myBlog/login.html
@@ -26,10 +26,12 @@
 		<script src="js/app.js"></script>
 		<script src="js/common/service/PopUp.js"></script>
 		<script src="js/common/service/userservice.js"></script>
+		<script src="js/common/controllers/NavController.js"></script>
 		<script src="template/Login/js/controller/LoginController.js"></script>
 		<script src="template/Add-blog/js/controller/AddBlogController.js"></script>
 		<script src="template/All-blogs/js/controller/AllBlogController.js"></script>
 		<script src="template/Blog-dets/js/controller/BlogDetsController.js"></script>
+		
 	</head>
 
 <body>
