--- a/projects/myBlog/login.html
+++ b/projects/myBlog/login.html
@@ -26,6 +26,7 @@
 		<script src="js/app.js"></script>
 		<script src="js/common/service/PopUp.js"></script>
 		<script src="js/common/service/userservice.js"></script>
+		<script src="js/common/directives/loginDirective.js"></script>
 		<script src="js/common/controllers/NavController.js"></script>
 		<script src="template/Login/js/controller/LoginController.js"></script>
 		<script src="template/Add-blog/js/controller/AddBlogController.js"></script>
