--- a/projects/myBlog/login.html
+++ b/projects/myBlog/login.html
@@ -16,6 +16,7 @@
 		<link href="css/signin.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
 		<link href="template/All-blogs/css/style.css" rel="stylesheet" />
+		<link href="template/blog-dets/css/style.css" rel="stylesheet" />
 		
 		<script src="js/libs/angular.min.js"></script>
 		<script src="js/libs/angular-route.min.js"></script>
